Update Dedicated CTA link on plans page

--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -33,7 +33,7 @@ Apollo offers the following plans to new organizations:
 | -------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **Serverless (Free)**            | Provides access to Serverless [cloud supergraphs](../graphs/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly Serverless operations. This plan is free.                                                                                                                                  |
 | **Serverless**                   | Removes the operation limit of the **Serverless (Free)** plan, and is billed based on usage _above_ that limit. Also expands metrics data retention.                                                                                                                                                                              |
-| **Dedicated <br/> (In preview)** | This plan lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It is currently in invite-only preview. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> if you'd like to request access or have any questions. |
+| **Dedicated <br/> (In preview)** | This plan lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It is currently in invite-only preview. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Get in touch</TrackableLink> if you'd like to request access or have any questions. |
 | **Enterprise**                   | The Enterprise plan features self-hosted routing, advanced security and schema delivery features, access control, and more. It does _not_ support cloud supergraphs. It includes negotiable usage rates. You can try out most Enterprise features for free with an [Enterprise trial](#enterprise-trials).                        |
 
 <Tip>
