--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -23,7 +23,7 @@ To complete this quickstart, you must have the following:
   - <TrackableLink href="https://www.apollographql.com/contact-sales?referrer=docs" eventName="content_contact_sales">Get in touch</TrackableLink> to request access.
 - One or more GraphQL APIs that Apollo can access. That means you must either:
   - Make your GraphQL API(s) available via a publicly accessible URL, for example, `https://api.mycompany.com/subgraphA`
-  - Keep your GraphQL API(s) private but allow secure connections, for example, via [VPC peering](https://docs.aws.amazon.com/vpc/latest/peering/what-is-vpc-peering.html/)
+  - Keep your GraphQL API(s) private but allow secure connections, for example, via [VPC networking](https://docs.aws.amazon.com/vpc/latest/peering/what-is-vpc-peering.html/)
 
 <Tip>
 
