--- a/src/content/graphos/cloud-routing/dedicated/index.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/index.mdx
@@ -16,6 +16,12 @@ Go the [Cloud Dedicated quickstart](./quickstart) to get started.
 
 </Tip>
 
+## Runs on AWS
+
+Cloud Dedicated includes a fully managed fleet of Apollo Routers that run in the AWS region of your choice. The following regions are currently available: us-east-2, us-east-1,  us-west-2,  ap-southeast-1,  ap-southeast-2,  ap-northeast-1,  ca-central-1,  eu-central-1,  eu-west-1,  eu-west-2,  eu-north-1. 
+Dedicated supports subgraphs running in any cloud region or provider; however, you may incur additional networking charges for subgraphs running outside the selected AWS region. AWS VPC Lattice is only supported the regions listed above.
+
+
 ## Private preview
 
 Cloud Dedicated is a new product and is in [preview](/resources/product-launch-stages/#preview) while it matures. It is only available to select customers on an invite-only basis. If you have feedback or are interested in joining the preview, <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink>.
