--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -19,17 +19,20 @@ To learn about Dedicated cloud routing in general, go to the [Cloud Dedicated ov
 To complete this quickstart, you must have the following:
 
 - A [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) account
-- An organization with the [Dedicated plan](https://www.apollographql.com/pricing/)
-  - <TrackableLink href="https://www.apollographql.com/contact-sales?referrer=docs" eventName="content_contact_sales">Get in touch</TrackableLink> to request access.
+- An organization with the Dedicated plan—<TrackableLink href="https://www.apollographql.com/contact-sales?referrer=docs" eventName="content_contact_sales">get in touch</TrackableLink> to request access.
 - One or more GraphQL APIs that Apollo can access. That means you must either:
   - Make your GraphQL API(s) available via a publicly accessible URL, for example, `https://api.mycompany.com/subgraphA`
   - Keep your GraphQL API(s) private but allow secure connections, for example, via [VPC networking](https://docs.aws.amazon.com/vpc/latest/peering/what-is-vpc-peering.html/)
 
-<Tip>
+If you have multiple subgraphs, _each_ needs to be exposed to Apollo. Your supergraph, however, should only be publicly accessible via your cloud router.
 
-In a supergraph, each GraphQL API is called a _subgraph_. Apollo refers to these GraphQL APIs as subgraphs, even if you only connect one GraphQL API.
+<Note>
 
-</Tip>
+In a supergraph, each GraphQL API is called a **subgraph**. Apollo refers to these GraphQL APIs as subgraphs, even if you only connect one GraphQL API.
+
+The Apollo Router doesn't supported nested federation—that is, a subgraph cannot act as a supergraph for another set of subgraphs.
+
+</Note>
 
 ## Step 1. Create a new graph
 
@@ -45,7 +48,7 @@ To provision a new Dedicated cloud router, you must first create a new graph in 
 
 1. Next, connect your GraphQL API to Apollo.
   - If your API URL is publicly accessible, enter the API URL. This URL is the URL that client applications currently use to query your API.
-  - If your API isn't publicly accessible and requires private networking, you can connect to it with [AWS VPC Lattice](../lattice). Select **My endpoint isn't publicly accessible** to connect a VPC.
+  - If your API isn't publicly accessible and requires private networking, you can connect to it with [AWS VPC Lattice](../lattice). Select **My endpoint isn't publicly accessible** to connect a VPC. Follow the prompts to complete private subgraph setup.
 
   <img
     className="screenshot"
@@ -91,7 +94,7 @@ The launch process typically takes 1-2 minutes but may take up to 5 minutes. Dur
 
 Dedicated cloud routers have a separate UI for management and configuration. Open the **Cloud Router** page from the left navigation. This page shows a summary of your cloud router, including its **API endpoint** and **API details**.
 
-Use the **Configuration** tab to manage your cloud router's configuration. See the [Apollo Router docs](/router/configuration/overview) for more information.
+Use the **Configuration** tab to manage your cloud router's configuration, including secrets and **Router configuration YAML**. See the [Apollo Router docs](/router/configuration/overview) for more information.
 
 <img
   className="screenshot"
@@ -123,7 +126,19 @@ Apollo recommends running a [load test](./throughput#loud-testing) to determine 
 
 ## Step 5. Go live
 
-When you're ready to go live, migrate clients to your router's endpoint. You can find your endpoint URL on the **Cloud router** page in GraphOS Studio.
+Your supergraph is ready to start receiving client operations! If you have existing client applications that connect directly to your GraphQL API, you can update their GraphQL endpoint URL to your router's URL.
+
+Similarly, any new client applications should use your router's URL.
+
+<Note>
+
+- For all browser-based clients, make sure their origin is allowed in your router's [CORS rules](#cors-rules).
+
+- Only update clients that communicate with the correct instance of your GraphQL API. For example, if your API has staging and production instances, only update clients that communicate with the instance used by this supergraph variant.
+
+</Note>
+
+You can find your endpoint URL on the **Cloud router** page in GraphOS Studio.
 
 <img
   className="screenshot"
@@ -131,10 +146,12 @@ When you're ready to go live, migrate clients to your router's endpoint. You can
   src="../../img/cloud-dedicated/router-endpoint.png"
 />
 
-Either pass the endpoint directly to your clients or configure a reverse proxy.
-
 <Note>
 
-Every router URL is on a subdomain of `apollographos.net`. Support for custom domains will become available in 2024.
+Every router URL is on a subdomain of `apollographos.net`. Custom domains support will become available in 2024 for Dedicated cloud routers.
 
 </Note>
+
+## Next steps
+
+Congratulations! 🎉 You've built a cloud supergraph on GraphOS. Check out the [next steps article](../../quickstart/next-steps/) for some of the most common and important actions to perform on your supergraph, including updating your subgraph's schema and setting up continuous delivery.
