--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -6,8 +6,8 @@ description: Learn more about Apollo-managed cloud routers that route requests t
 
 <Note>
 
-**Cloud supergraphs are only available to organizations with Apollo Serverless and Dedicated plans.**
-They are not available to organizations with an Enterprise plan or a legacy Free or Team plan.
+Cloud supergraphs are only available to organizations with Serverless and Dedicated plans.
+They are not available with an Enterprise plan or a legacy Free or Team plan.
 
 [See plan details.](https://www.apollographql.com/pricing/)
 
@@ -114,11 +114,11 @@ Apollo works with major public cloud providers to deliver GraphOS cloud routing.
 
 Cloud routing for Serverless plans is only available in Chicago, USA. Our infrastructure has interconnects with major public cloud providers, so latency is minimal. For example, latency between Chicago and AWS in Virginia is approximately 10 ms. If there's a specific region you'd like us to support please [request a region](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform).
 
-Cloud routing on the [Dedicated](./dedicated) plan has a wider variety of options. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Get in touch</TrackableLink> to learn more.
+Cloud routing on the Dedicated plan has a wider [variety of options](./dedicated#runs-on-aws). <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Get in touch</TrackableLink> to learn more.
 
 #### Can I choose my cloud router's region?
 
-Choice of region for cloud routers is only available on the [Dedicated](./dedicated) plan.
+Choice of region for cloud routers is only available on the Dedicated plan.
 
 #### Does GraphOS also host my individual subgraphs?
 
