--- a/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
@@ -14,21 +14,14 @@ To help resolve AWS VPC Lattice connection issues, we recommend enabling subgrap
 
 1. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
 
-2. Navigate to the Settings page for your graph variant.
+2. Open the **Cloud Router** page from the left navigation.
+3. Open the **Configuration** tab:
 
-<img
-  className="screenshot"
-  alt="GraphOS Studio variant page"
-  src="../../img/cloud-dedicated/studio-variant-page.png"
-/>
-
-3. In the left sidebar menu, click **Settings**, then on **Cloud Router** to access the GraphOS Cloud settings page.
-
-<img
-  className="screenshot"
-  alt="GraphOS Studio Cloud Router settings page"
-  src="../../img/cloud-dedicated/studio-settings-page.png"
-/>
+  <img
+    className="screenshot"
+    alt="The Cloud Router page in GraphOS Studio"
+    src="../../img/cloud-dedicated/cloud-router-configuration.png"
+  />
 
 4. In **Router configuration YAML**, ensure that the following configuration block that sets `include_subgraph_errors` is present:
 
