--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -7,12 +7,7 @@ description: Run a cloud router for your GraphQL APIs on dedicated infrastructur
 <DedicatedPreview />
 
 Follow this hands-on guide to create a new graph that uses a Dedicated cloud router.
-
-<Tip>
-
 To learn about Dedicated cloud routing in general, go to the [Cloud Dedicated overview](./).
-
-</Tip>
 
 ## Prerequisites
 
@@ -154,4 +149,4 @@ Every router URL is on a subdomain of `apollographos.net`. Custom domains suppor
 
 ## Next steps
 
-Congratulations! 🎉 You've built a cloud supergraph on GraphOS. Check out the [next steps article](../../quickstart/next-steps/) for some of the most common and important actions to perform on your supergraph, including updating your subgraph's schema and setting up continuous delivery.
+Congratulations! 🎉 You've built a cloud supergraph on GraphOS. Check out the [Next steps article](../../quickstart/next-steps/) for some of the most common and important actions to perform on your supergraph, including updating your subgraph's schema and setting up continuous delivery.
