--- a/src/content/graphos/cloud-routing/dedicated/migration.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/migration.mdx
@@ -16,7 +16,7 @@ GraphOS offers two tiers of cloud routing: Serverless and Dedicated. This guide 
 
 <Note>
 
-Dedicated cloud routers currently support all [premium router features](/router/enterprise-features) except for [safelisting with persisted queries](/router/configuration/persisted-queries/) and [automatic persisted queries](/apollo-server/performance/apq/). Support for these is on the roadmap.
+Dedicated cloud routers currently support all [premium router features](/router/enterprise-features) except for [safelisting with persisted queries](/router/configuration/persisted-queries/), [automatic persisted queries](/apollo-server/performance/apq/), and [offline licenses](/router/enterprise-features/#offline-enterprise-license). Support for both persisted queries features is on the roadmap.
 
 </Note>
 
