--- a/src/content/graphos/enterprise/reference-architecture.mdx
+++ b/src/content/graphos/enterprise/reference-architecture.mdx
@@ -19,28 +19,13 @@ Apollo provides a reference architecture for self-hosting the router and subgrap
 
 <Tip>
 
-Check out our blog post, [Deploying the Apollo Router at Apollo](https://www.apollographql.com/blog/announcement/platform/deploying-the-apollo-router-at-apollo/), to learn about Apollo's
-internal use of the router, including the performance improvements and resource utilization reductions.
+Check out our blog post, [Deploying the Apollo Router at Apollo](https://www.apollographql.com/blog/announcement/platform/deploying-the-apollo-router-at-apollo/), to learn about Apollo's internal use of the router, including the performance improvements and resource utilization reductions.
 
 </Tip>
 
-## Reference architecture repositories
-
-The reference architecture consists of the following GitHub repositories:
-
-| Repository                                                                                        | Description                                                                                                                    |
-| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------ |
-| [build-a-supergraph](https://github.com/apollosolutions/build-a-supergraph)                       | The main repository that contains a step-by-step guide to utilizing the architecture and deploying it to AWS or GCP            |
-| [build-a-supergraph-infra](https://github.com/apollosolutions/build-a-supergraph-infra)           | The template repository for Kubernetes deployment of the Apollo Router, OTel collector, Grafana, performance tests, and Zipkin |
-| [build-a-supergraph-subgraph-a](https://github.com/apollosolutions/build-a-supergraph-subgraph-a) | Template repository for a subgraph used in the reference architecture                                                          |
-| [build-a-supergraph-subgraph-b](https://github.com/apollosolutions/build-a-supergraph-subgraph-b) | Template repository for a subgraph used in the reference architecture                                                          |
-
 ## Getting started
 
-To get started with the reference architecture, follow the README in the main [build-a-supergraph](https://github.com/apollosolutions/build-a-supergraph) repository. 
-The README provides a how-to guide that walks you through building a supergraph with the reference architecture. It gives step-by-step instructions for setup, CI/CD, load testing, and more. 
-
-While you work through the steps of deploying the reference architecture, you can use this guide as a complementary reference of the architecture's organization and configuration.
+To get started with the reference architecture, follow the README in the [reference](https://github.com/apollosolutions/reference-architecture) repository. The README provides a how-to guide that walks you through building a supergraph with the reference architecture.
 
 ## Architecture overview
 
@@ -48,6 +33,7 @@ The reference architecture uses two Kubernetes clusters, one for a development e
 
 - Hosting the router
 - Hosting subgraphs
+- Hosting a client
 - Collecting traces
 - Load testing K6 and viewing results with Grafana
 
@@ -56,15 +42,14 @@ For both environments, GraphOS serves as a schema registry. Each subgraph publis
 ```mermaid
 graph LR;
   subgraph "Your infrastructure"
-  serviceA[Subgraph A];
-  serviceB[Subgraph B];
+  subgraphs[[Subgraphs]];
   router([Router]);
   end
   subgraph "Apollo GraphOS"
   registry{{Schema <br/> Registry}};
   uplink{{Apollo <br/> Uplink}}
   end
-  serviceA & serviceB -->|"Publishes<br/>schema"| registry;
+  subgraphs -->|"Publishes<br/>schema"| registry;
   registry -->|"Updates"| uplink;
   router -->|Polls for schema <br/> and configuration changes| uplink;
   class registry secondary;
@@ -75,20 +60,22 @@ The router also pushes performance and utilization metrics to GraphOS via Uplink
 
 ### Development environment
 
-The development environment consists of the router and subgraphs hosted in a Kubernetes cluster in either AWS or GCP.  GraphOS validates subgraph schemas using [schema checks](/federation/managed-federation/federated-schema-checks/) and makes them available to the router via [Uplink](/federation/managed-federation/uplink/). The router also reports usage metrics back to GraphOS.
+The development environment consists of the router and subgraphs hosted in a Kubernetes cluster in either AWS or GCP. GraphOS validates subgraph schemas using [schema checks](/federation/managed-federation/federated-schema-checks/) and makes them available to the router via [Uplink](/federation/managed-federation/uplink/). The router also reports usage metrics back to GraphOS.
 
 ```mermaid
 flowchart TB
-	developers[Developers]
+    developers[Developers]
 	subgraph cloud["Cloud (AWS or GCP)"]
 		subgraph devcluster["Dev Cluster"]
-			subgraph ingresscontainer["Ingress"]
-				ingress{"🔀"}
+			subgraph routeringresscontainer["Ingress"]
+				routeringress{"🔀"}
 			end
-
+            subgraph clientingresscontainer["Ingress"]
+				clientingress{"🔀"}
+			end
+            client[Client]
 			router["Router"]
-			subgrapha["Subgraph A"]
-			subgraphb["Subgraph B"]
+			subgraphs[["Subgraphs"]]
 		end
 	end
 
@@ -103,44 +90,47 @@ flowchart TB
   end
 
 	%% Relationships
-	developers --> ingress
-	ingress --> router
-	router --> subgrapha
-	router --> subgraphb
+  clientingress --> client
+	client --> routeringress
+  developers --> routeringress
+  developers --> clientingress
+	routeringress --> router
+	router --> subgraphs
 	uplink -.-> router
   router -.-> metrics
   githubactions -.-> uplink
   uplink -.-> checks
-
 ```
 
 ### Production environment
 
-The production environment is similar to the development environment with some additions. 
+The production environment is similar to the development environment with some additions.
 
 - The router and subgraphs send their OpenTelemetry data to a collector. You can then view the data in Zipkin.
 - A K6 load tester sends traffic to the router and stores load test results in InfluxDB for viewing in Grafana.
 
 ```mermaid
 flowchart TB
-	applications[Applications / Consumers]
+  developers[Developers]
 	subgraph cloud["Cloud (AWS or GCP)"]
-		subgraph devcluster["Prod Cluster"]
-			subgraph ingresscontainer["Ingress"]
-				ingress{"🔀"}
+		subgraph prodcluster["Prod Cluster"]
+			subgraph routeringresscontainer["Router Ingress"]
+				routeringress{"🔀"}
+			end
+            subgraph clientingresscontainer["Client Ingress"]
+				clientingress{"🔀"}
 			end
 
+      client[Client]
 			router["Router"]
-			subgrapha["Subgraph A"]
-			subgraphb["Subgraph B"]
+			subgraphs[["Subgraphs"]]
 
-			collector["OTel Collector"]
+      collector["OTel Collector"]
 			zipkin[Zipkin]
 
 			k6["K6 Load Tester"]
 			grafana["Grafana"]
       influxdb[("InfluxDB")]
-
 		end
 	end
 
@@ -154,232 +144,24 @@ flowchart TB
       githubactions["Subgraph CI/CD (GitHub Actions)"]
   end
 
-	%% Relationships
-	applications --> ingress
-	ingress --> router
-	router --> subgrapha
-	router --> subgraphb
+    %% Relationships
+    clientingress --> client
+	  client --> routeringress
+    developers --> routeringress
+    developers --> clientingress
+    routeringress --> router
+    router --> subgraphs
+	  uplink -.-> router
+    router -.-> metrics
+    githubactions -.-> uplink
 
-	router -.-> collector
-	subgrapha -.-> collector
-	subgraphb -.-> collector
-	collector -.-> zipkin
-
-	k6 -.-> router
-	k6 -.-> influxdb
-  grafana --> influxdb
-
-  uplink -.-> router
-  router -.-> metrics
-  githubactions -.-> uplink
-  uplink -.-> checks
-```
-
-## Components
-
-This section summarizes the various services and runtimes that comprise the reference architecture. These include the router, subgraphs, OpenTelemetry, Zipkin, K6, and Grafana.
-
-### Router
-
-The router is [deployed via GitHub Actions](#deploy-router) to Kubernetes using the Helm charts provided for router deployments.
-
-```yaml title="Chart.yaml"
-dependencies:
-  - name: router
-    version: 1.33.2
-    repository: oci://ghcr.io/apollographql/helm-charts
-```
-
-The `values.yaml` file in `router.router.configuration` provides router configuration values at runtime.
-
-```yaml title="values.yaml"
-router:
-  router:
-    configuration:
-      health_check:
-        listen: 0.0.0.0:8080
-      sandbox:
-        enabled: true
-      homepage:
-        enabled: false
-```
-
-This approach lets you run the router in Kubernetes with minimal effort. The schema and configurations the router receives from Uplink have already been composed and validated.
-
-```mermaid
-flowchart LR
-	applications[Application/Consumers]
-  subgraph devcluster["Prod Cluster"]
-    subgraph ingresscontainer["Ingress"]
-      ingress{"🔀"}
-    end
-
-    router["Router"]
-    subgrapha["Subgraph A"]
-    subgraphb["Subgraph B"]
-
-  end
-
-  subgraph graphos["Apollo GraphOS"]
-    uplink["Schema Registry/Uplink"]
-    metrics["Usage Metrics"]
-  end
-
-	%% Relationships
-	applications --> ingress
-	ingress --> router
-	router --> subgrapha
-	router --> subgraphb
-
-  uplink -.-> router
-  router -.-> metrics
-```
-
-### Subgraphs
-
-Each subgraph is [deployed via GitHub Actions](#development-actions) to Kubernetes using a Helm chart. Each subgraph also uses GitHub Actions to publish its schema updates to the schema registry. Each subgraph is deployed to its own Kubernetes namespace. The subgraphs use a [`HorizontalPodAutoscaler`](https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/) to automatically scale up service instances based on CPU or memory utilization.
-
-```yaml title="values.yaml"
-autoscaling:
-  enabled: false
-  targetCPUUtilizationPercentage: 80
-  minReplicas: 1
-  maxReplicas: 100
-```
-
-```yaml title="hpa.yaml"
-minReplicas: {{ .Values.autoscaling.minReplicas }}
-maxReplicas: {{ .Values.autoscaling.maxReplicas }}
-metrics:
-  {{- if .Values.autoscaling.targetCPUUtilizationPercentage }}
-  - type: Resource
-    resource:
-      name: cpu
-      targetAverageUtilization: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
-  {{- end }}
-  {{- if .Values.autoscaling.targetMemoryUtilizationPercentage }}
-  - type: Resource
-    resource:
-      name: memory
-      targetAverageUtilization: {{ .Values.autoscaling.targetMemoryUtilizationPercentage }}
-  {{- end }}
-```
-
-The router queries subgraphs directly.
-
-```mermaid
-flowchart LR
-	applications[Application/Consumers]
-  subgraph devcluster["Prod Cluster"]
-    subgraph ingresscontainer["Ingress"]
-      ingress{"🔀"}
-    end
-
-    router["Router"]
-    subgrapha["Subgraph A"]
-    subgraphb["Subgraph B"]
-
-  end
-
-	%% Relationships
-	applications --> ingress
-	ingress --> router
-	router --> subgrapha
-	router --> subgraphb
-```
-
-### OpenTelemetry and Zipkin
-
-The OpenTelemetry Collector is [deployed via GitHub Actions](#deploy-open-telemetry-collector) to Kubernetes using the `otel/opentelemetry-collector-contrib` Docker image.
-
-```yml [title="values.yml"]
-image:
-  repository: otel/opentelemetry-collector-contrib
-  pullPolicy: IfNotPresent
-  tag: '0.59.0'
-```
-
-The collector is configured to export trace metrics to the Zipkin `spans` endpoint.
-
-```yml [title="configmap.yml"]
-exporters:
-  zipkin:
-    endpoint: 'http://zipkin.zipkin.svc.cluster.local:9411/api/v2/spans'
-```
-
-Zipkin is [deployed via GitHub Actions](#deploy-open-telemetry-collector) to Kubernetes using the https://openzipkin.github.io/zipkin Helm chart.
-
-```yml [title="Chart.yaml"]
-dependencies:
-  - name: zipkin
-    version: 0.3.0
-    repository: https://openzipkin.github.io/zipkin
-```
-
-```mermaid
-flowchart TB
-  subgraph devcluster["Prod Cluster"]
-    router["Router"]
-    subgrapha["Subgraph A"]
-    subgraphb["Subgraph B"]
-
-    collector["OTel Collector"]
-    zipkin[Zipkin]
-  end
-
-	%% Relationships
-	router -.-> collector
-	subgrapha -.-> collector
-	subgraphb -.-> collector
-	collector -.-> zipkin
-```
-
-### K6 and Grafana
-
-The [K6 Operator](https://github.com/grafana/k6-operator) is [deployed via GitHub Actions](#deploy-open-telemetry-collector) to Kubernetes. The operator exports test results to InfluxDB for viewing in Grafana.
-
-```yaml [title="_run-loadtest-aws.yaml"]
-spec:
-  parallelism: ${{ inputs.parallelism }}
-  arguments: '--out influxdb=http://influxdb.monitoring:8086/db'
-  script:
-    configMap:
-      name: tests
-      file: ${{ inputs.test }}.js
-```
-
-```yaml [title="value.yaml"]
-datasources:
-  datasources.yaml:
-    apiVersion: 1
-    datasources:
-      - name: InfluxDB
-        type: influxdb
-        access: proxy
-        url: http://influxdb.monitoring:8086
-```
-
-```mermaid
-flowchart LR
-  subgraph devcluster["Prod Cluster"]
-
-    router["Router"]
-    subgrapha["Subgraph A"]
-    subgraphb["Subgraph B"]
-
-    k6["K6 Load Tester"]
-    influxdb[("InfluxDB")]
-    grafana["Grafana"]
-
-  end
-
-	%% Relationships
-	router --> subgrapha
-	router --> subgraphb
-
-	k6 ---> router
-	k6 -.-> influxdb
-  grafana --> influxdb
+    uplink -.-> checks
+    router -.-> collector
+    subgraphs -.-> collector
+    collector -.-> zipkin
+    k6 -.-> router
+    k6 -.-> influxdb
+    grafana --> influxdb
 ```
 
 ## CI/CD
@@ -389,10 +171,13 @@ The reference architecture uses [GitHub Actions](https://docs.github.com/en/acti
 - PR-level schema checks
 - Building containers using Docker
 - Publishing subgraph schemas to Apollo Uplink
-- Router deployment to the Kubernetes cluster
-- OTel collector deployment
-- Grafana deployment
-- Running load tests
+- Deployments for:
+  - Router
+  - Subgraphs
+  - Client
+  - OpenTelemetry Collector
+  - Grafana
+- Running load tests using k6
 
 ### Development actions
 
