--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -154,8 +154,9 @@ You can think of each revision as equal to a [commit](<https://en.wikipedia.org/
   alt="Failed schema check for a proposal in GraphOS Studio"
 />
 
-Checks run against the schema of the source variant from which the proposal was created.
-This enables checks to capture breaking changes based on the source variant's operation history.
+Checks run proposal changes against the most recent version of the proposal's source variant schema.
+For example, if your proposal removes a field that was already removed in the latest published version of the source variant, the check doesn't consider the removal a change.
+This allows checks to detect breaking changes in the proposal as efficiently as possible.
 
 ## Self-review and commentary
 
