--- a/src/content/graphos/enterprise/reference-architecture.mdx
+++ b/src/content/graphos/enterprise/reference-architecture.mdx
@@ -9,7 +9,7 @@ While you can run the Apollo Router regardless of your Apollo plan, connecting t
 
 </EnterpriseFeature>
 
-In this guide, learn about the fundamental concepts and configuration underlying Apollo's reference architecture for enterprise deployment of GraphOS with a self-hosted router. Use this guide as a companion reference to the [Apollo reference architecture repositories](#reference-architecture-repositories).
+In this guide, learn about the fundamental concepts and configuration underlying Apollo's reference architecture for enterprise deployment of GraphOS with a self-hosted router. Use this overview as a companion reference to the [Apollo reference architecture repository](https://github.com/apollosolutions/reference-architecture).
 
 ## About Apollo's reference architecture
 
